# gnome-shell-accent-color

./: g-ir-compiler.sh.in  g-ir-doc-tool.sh.in  meson.build  meson_options.txt  st-accent-color.c  st-accent-color.h
debian/: changelog  control  copyright  rules
extension/: extension.js  metadata.json
